# multiplicity

./: Cargo.toml  README.md
.github/workflows/: sedona_spine_ci.yml
docs/adr/: ADR-001-Combined-Mandate.md  ADR-001-Production-Installation.md  ADR-042-MOC-Certificate-Integration.md  ADR-044-Sedona-Spine-Front-Matter-Hardening.md
lean/: CRMF.lean  F1Square.lean  MOC.lean  lakefile.toml
lean/MOC/: Core.lean  Resonance.lean
lean/scripts/: audit_axioms.lean
models/legalese-scopist/: CONTRACT.md
multiplicity/: README.md
multiplicity/rust/: Cargo.toml
phase_mirror_wasm/: Cargo.toml
phase_mirror_wasm/src/: lib.rs
rust/: Cargo.toml
tests/: SignatureCheckTest.lean
