[package]
name = "phase_mirror_wasm"
version = "1.0.0-alpha"
edition = "2021"
license = "MIT"
description = "Phase Mirror Verified Substrates - WASM"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4", "js"] }
anyhow = "1.0.102"
# sedona-sdk = "2.3"
